Change Log:

**9/16/15**

- Added ability to view leaderboards and import profile from leaderboard view

**9/11/15**

- Fixed breakpoint calculation when using Gogok with level < 25

**9/10/15**

- Thunderfury's damage proc will now affect multiple targets
- Thunderfury's internal cooldown set to 1 / APS
- Added Damage Procs (Thunderfury and Fulminator) to Skill Data popup

**9/9/15**

- Added Depth Diggers
- Added Fulminator. Ignores proc coefficient (assumes that if there are multiple targets within 10 yards of each other, all targets would eventually get the DoT).
- Added Thunderfury. See this post for details on implementation: http://us.battle.net/d3/en/forum/topic/18706673688#13

**9/8/15**

- Added Leech passive (no effect on dps)
- Next/Previous breakpoint calculator now takes into account Hunter's Wrath and Yang's Recurve
- Added Bane of the Stricken legendary Gem
- Dead Man's Legacy bonus now affects MS fired by M4 Sentries

**8/27/15**

- Fixed main hand RCR max limit to allow for Yang's Recurve 
- Added Cubed legendary powers to "paperdoll" view
- Removed cube items from profile "Items..." popup window
- Fixed Helltrapper, Pride's Fall and Royal Ring item URLs (blizzard changed them)
- Fixed Pride's Fall, Leoric's Crown, Tasker and Theo (legendary powers for these items were not applied when in Cube, only when worn)

**8/26/15**

- Added Yang's Recurve
- Added Hunter's Wrath (with import of legendary power)
- Fixed BreakPoint calculations for skills that depend on weapon type (e.g. EvasiveFire). This was shown correctly in break point table, but was not being calculated properly in the simulation, resulting in 1.02 APS for those skills.
- Added import of legendary powers from cube
- Removed "freeze" from Cull the Weak legend description
- Sentry skill damage is now multiplicative for M4 skills, additive for sentry bolts and rockets

**7/2/15**
- Added Cube item effects (preparation for 2.3). Still need to add more legendary item types.

**6/29/15**