@@ -28,8 +28,8 @@ public class Version  implements Serializable {
 
 	public static final String PREFIX = "Version:";
 	
-	public static String VERSION = "2.3-150916.2";
-	public static String VERSION_DATE = "09/16/15";
+	public static String VERSION = "2.3-150917.1";
+	public static String VERSION_DATE = "09/17/15";
 	
 	public String version;
 	
