@@ -12,7 +12,7 @@
 <link rel="icon" href="demonhunter_female.ico?v1" type="image/x-icon">
 <title>DH Damage Calculator</title>
 <script type="text/javascript" src="dhcalc/dhcalc.nocache.js?v=4"></script>
-<script src="tooltips.js?v=14"></script>
+<script src="tooltips.js?v=15"></script>
 </head>
 <script>
 //Check if a new cache is available on page load.
